--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,5 +34,6 @@ jobs:
           node-version: 20
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
+      - run: pnpm exec playwright install --with-deps
       - run: pnpm exec drizzle-kit push
       - run: pnpm run test
