Add OpenAI provider option

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,12 @@ AUTH_SECRET=your_auth_secret
 # Set to 'false' to disable login requirement
 AUTH_REQUIRED=true
 
+# AI model provider (xai or openai)
+AI_PROVIDER=xai
+
 # API keys
 XAI_API_KEY=your_xai_api_key
+OPENAI_API_KEY=your_openai_api_key
 GROQ_API_KEY=your_groq_api_key
 
 # Vercel Blob token
