--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ai-sdk/groq": "^1.2.0",
     "@ai-sdk/react": "^1.2.0",
+    "@ai-sdk/openai": "^1.2.0",
     "@ai-sdk/xai": "^1.2.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
