feat: allow saving documents without auth

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ AUTH_SECRET=your_auth_secret
 
 # Set to 'false' to disable login requirement
 AUTH_REQUIRED=true
+# When AUTH_REQUIRED is 'false', documents will be stored using this user id
+ANON_USER_ID=
 
 # AI model provider (xai or openai)
 AI_PROVIDER=xai
